Update docs - 29 Object

--- a/pages/27.md
+++ b/pages/27.md
@@ -1,7 +1,8 @@
 # "Make it! 다차원 배열"
 
-![27](images/27.jpg)
+![27](images/27.png)
 
 > ###### KEYWORDS
 >
-> Multi-dimensional, Multi, Dimensional, Array, pop, push, splice
+> Array
+
