--- a/pages/28.md
+++ b/pages/28.md
@@ -1,7 +1,7 @@
 # "☆뽀나쓰☆ Tip of Console"
 
-![28](images/28.jpg)
+![28](images/28.png)
 
 > ###### KEYWORDS
 >
-> Tip of Console, Console, warn, error, count
+> console
